--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
+        "laravel-frontend-presets/tailwindcss": "^0.4.1",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0"
     },
