--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "fideloper/proxy": "~3.3",
         "laravel-frontend-presets/tailwindcss": "^0.4.1",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "propaganistas/laravel-phone": "^3.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
