Start moving from Socialite to manual message opt-in for FB

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Stauffers on Science"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -39,5 +39,3 @@ TWILIO_AUTH_TOKEN=
 TWILIO_FROM=
 
 FACEBOOK_PAGE_TOKEN=
-FACEBOOK_CLIENT_ID=
-FACEBOOK_CLIENT_SECRET=
