--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,8 @@ TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_FROM=
 
-FACEBOOK_PAGE_TOKEN=
+FACEBOOK_TOKEN=
+FACEBOOK_APP_SECRET=
+FACEBOOK_VERIFICATION=
 
 BUGSNAG_API_KEY=
