--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,20 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "botman/botman": "^2.1",
+        "botman/driver-facebook": "^1.5",
+        "botman/driver-web": "^1.3",
+        "botman/studio-addons": "^1.1",
+        "botman/tinker": "~1.0",
         "bugsnag/bugsnag-laravel": "^2.0",
+        "clue/stdio-react": "^1.0",
         "fideloper/proxy": "~3.3",
         "laravel-frontend-presets/tailwindcss": "^0.4.1",
         "laravel-notification-channels/facebook": "^0.0.1",
         "laravel-notification-channels/twilio": "^2.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "mpociot/slack-client": "^0.3.0",
         "propaganistas/laravel-phone": "^3.0",
         "willvincent/feeds": "dev-master"
     },
@@ -49,6 +56,16 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate"
+        ],
+        "post-install-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postInstall",
+            "BotMan\\Studio\\Providers\\DriverServiceProvider::publishDriverConfigurations",
+            "@php artisan optimize"
+        ],
+        "post-update-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+            "BotMan\\Studio\\Providers\\DriverServiceProvider::publishDriverConfigurations",
+            "@php artisan optimize"
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
