--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,12 @@
         "botman/studio-addons": "^1.1",
         "botman/tinker": "~1.0",
         "bugsnag/bugsnag-laravel": "^2.0",
-        "clue/stdio-react": "^1.0",
         "fideloper/proxy": "~3.3",
         "laravel-frontend-presets/tailwindcss": "^0.4.1",
         "laravel-notification-channels/facebook": "^0.0.1",
         "laravel-notification-channels/twilio": "^2.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "mpociot/slack-client": "^0.3.0",
         "propaganistas/laravel-phone": "^3.0",
         "willvincent/feeds": "dev-master"
     },
@@ -27,8 +25,7 @@
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "~6.0",
-        "symfony/thanks": "^1.0"
+        "phpunit/phpunit": "~6.0"
     },
     "autoload": {
         "classmap": [
