Prep for non-SoS-friendliness

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME="Stauffers on Science"
+APP_NAME="Podcast Subscriber"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -8,9 +8,9 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=podcast_subscriber
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -45,3 +45,7 @@ FACEBOOK_VERIFICATION=
 BUGSNAG_API_KEY=
 
 IFTTT_WEBHOOK_KEY=
+
+RSS_URL=
+ITUNES_URL=
+MESSENGER_URL=
