--- a/.env.example
+++ b/.env.example
@@ -51,3 +51,8 @@ ITUNES_URL=
 MESSENGER_URL=
 LEGAL_EMAIL=
 PODCAST_URL=
+
+TWITTER_CONSUMER_KEY=
+TWITTER_CONSUMER_SECRET=
+TWITTER_ACCESS_TOKEN=
+TWITTER_ACCESS_SECRET=
